2013-09-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix automake warnings.

	* src/thbrk/Makefile.am:
	* src/thcell/Makefile.am:
	* src/thcoll/Makefile.am:
	* src/thctype/Makefile.am:
	* src/thinp/Makefile.am:
	* src/thrend/Makefile.am:
	* src/thstr/Makefile.am:
	* src/thwbrk/Makefile.am:
	* src/thwchar/Makefile.am:
	* src/thwctype/Makefile.am:
	* src/thwstr/Makefile.am:
	* tests/Makefile.am:
	  - Replace deprecated INCLUDES with AM_CPPFLAGS.

2013-08-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-common.txt:
	* data/tdict-district.txt:
	* data/tdict-ict.txt:
	* data/tdict-proper.txt: Add words.

	* data/tdict-std.txt: Remove 'พาส' whose use is rare and which
	potentially causes ambiguity like in 'พาสมองเสื่อม'.

2013-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-common.txt:
	* data/tdict-geo.txt:
	* data/tdict-ict.txt:
	* data/tdict-lang-ethnic.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt: Add words.

2013-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Remove compound words that potentially cause ambiguity.

	* data/tdict-std-compound.txt:
	  - Remove 'มีหน้า' which can cause 'มีหน้า|ที่' instead of 'มี|หน้าที่'.
	  - Remove 'ลืมตา' which can cause 'ลืมตา|มหา' instead of 'ลืม|ตาม|หา'.

2013-02-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version suffix added.

2013-01-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac, NEWS:
	=== Version 0.1.19 ===

2013-01-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Modernize autoconf & switch to XZ tarball compression.

	* configure.in -> configure.ac:
	  - Rename file for modern autoconf.
	  - Replace deprecated AC_INIT() form with PACKAGE, VERSION form.
	  - Use AC_CONFIG_SRCDIR() instead for the old AC_INIT() form.
	  - Add AC_CONFIG_MACRO_DIR().
	  - Replace deprecated AC_INIT_AUTOMAKE() form with OPTIONS form,
	    passing "dist-xz no-dist-gzip" options to switch to XZ tarball.